--- a/package.json
+++ b/package.json
@@ -9,12 +9,18 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.0.8",
+    "@react-navigation/native-stack": "^6.5.0",
+    "@react-navigation/stack": "^6.1.1",
     "expo": "~44.0.2",
+    "expo-location": "~14.0.1",
     "expo-splash-screen": "~0.14.1",
     "expo-status-bar": "~1.2.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-geocoder": "^0.5.0",
+    "react-native-maps": "^0.30.1",
     "react-native-web": "0.17.1"
   },
   "devDependencies": {
